# tempo-x402

./: CLAUDE.md  Cargo.toml  Dockerfile  README.md  instance_info.json  llms.txt  test_discovered_peers.json  test_instance_info.json
.github/workflows/: docker.yml  release.yml
crates/tempo-x402/: Cargo.toml
crates/tempo-x402-agent/: CLAUDE.md  Cargo.toml
crates/tempo-x402-app/: CLAUDE.md  Cargo.toml  index.html  style.css
crates/tempo-x402-app/src/: api.rs  cartridge_runner.rs  lib.rs  studio.rs
crates/tempo-x402-cartridge/: Cargo.toml
crates/tempo-x402-cartridge/src/: abi.rs  compiler.rs  engine.rs
crates/tempo-x402-client/: Cargo.toml
crates/tempo-x402-erc8004/: CLAUDE.md  Cargo.toml
crates/tempo-x402-erc8004/src/: contracts.rs  deploy.rs  discovery.rs  identity.rs  lib.rs  recovery.rs
crates/tempo-x402-facilitator/: Cargo.toml
crates/tempo-x402-gateway/: Cargo.toml
crates/tempo-x402-gateway/src/: middleware.rs
crates/tempo-x402-identity/: Cargo.toml
crates/tempo-x402-identity/src/: lib.rs
crates/tempo-x402-mind/: Cargo.toml
crates/tempo-x402-mind/src/: callosum.rs  consolidation.rs  memory.rs
crates/tempo-x402-model/: Cargo.toml
crates/tempo-x402-model/src/: codegen.rs  lib.rs  transformer.rs
crates/tempo-x402-node/: CLAUDE.md  Cargo.toml
crates/tempo-x402-node/src/: clone.rs  db.rs  main.rs  railway.rs  soul_observer.rs  (+1 more)
crates/tempo-x402-security-audit/: Cargo.toml
crates/tempo-x402-server/: Cargo.toml
crates/tempo-x402-soul/: CLAUDE.md  Cargo.toml
crates/tempo-x402-wallet/: Cargo.toml
scripts/: peer-health.sh
(+83 files in other folders)
