[package]
name = "tempo-x402-erc8004"
version = "1.3.2"
edition = "2021"
description = "ERC-8004 (Trustless Agents) integration: on-chain identity, reputation, and validation registries"
license = "MIT"
repository = "https://github.com/compusophy/tempo-x402"
readme = "../../README.md"
keywords = ["x402", "tempo", "erc8004", "agent-identity", "reputation"]
categories = ["web-programming", "cryptography::cryptocurrencies"]

[lib]
name = "x402_erc8004"

[dependencies]
x402 = { workspace = true }
x402-wallet = { workspace = true }
alloy = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
